// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Management tests it should render Buses Management page 1`] = `
<div>
  <section
    className="flex justify-between content-center pb-7 font-raleway"
  >
    <div>
      <input
        className="p-1 rounded-md border-2"
        name="search"
        onChange={[Function]}
        placeholder="Search buses..."
        type="text"
        value=""
      />
    </div>
    
  </section>
  <table
    className="w-full"
    role="table"
  >
    <thead>
      <tr
        className="pb-10 "
        role="row"
      >
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Plate number
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Bus type
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Seats
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Driver
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Route
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Management
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    />
  </table>
</div>
`;

exports[`Management tests it should render Companies Management page 1`] = `
<div>
  Companies management
</div>
`;

exports[`Management tests it should render Drivers Management page 1`] = `
<div>
  <section
    className="flex justify-between content-center pb-7"
  >
    <div>
      <input
        className="p-1 rounded-md border-2"
        name="search"
        onChange={[Function]}
        placeholder="Search Drivers..."
        type="text"
        value=""
      />
    </div>
    
  </section>
  <table
    className="w-full overflow-x-scroll font-raleway"
    role="table"
  >
    <thead>
      <tr
        className="pb-10 "
        role="row"
      >
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Names
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Email
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          License
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Assigned Bus
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4"
          colSpan={1}
          role="columnheader"
        >
          Management
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    />
  </table>
</div>
`;

exports[`Management tests it should render Operators Management page 1`] = `
<div>
  Operators management
</div>
`;

exports[`Management tests it should render Routes Management page 1`] = `
<div>
  <section
    className="flex justify-between content-center pb-7 font-raleway"
  >
    <div>
      <input
        className="p-1 rounded-md border-2"
        name="search"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
     
    
  </section>
   
  <table
    className="w-full"
    role="table"
  >
    <thead>
      <tr
        className="pb-10 "
        role="row"
      >
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4 font-raleway"
          colSpan={1}
          role="columnheader"
        >
          Destination 1
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4 font-raleway"
          colSpan={1}
          role="columnheader"
        >
          Destination 2
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4 font-raleway"
          colSpan={1}
          role="columnheader"
        >
          Distance
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4 font-raleway"
          colSpan={1}
          role="columnheader"
        >
          Total buses in Route
        </th>
        <th
          className="text-left font-extrabold pr-5 border-b-2 pb-4 font-raleway"
          colSpan={1}
          role="columnheader"
        >
          Management
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    />
  </table>
</div>
`;
